--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ arraydeque = "0.5.1"
 arrayref = "0.3.6"
 base64 = "0.22"
 bincode = "1.3.1"
+bounded-vec-deque = "0.1.1"
 bitcoin = { path="../rust-flokicoin/bitcoin", version = "0.32.5", features = ["serde", "rand-std"] }
 clap = "2.33.3"
 crossbeam-channel = "0.5.0"
