--- a/tests/config.toml
+++ b/tests/config.toml
@@ -8,14 +8,14 @@
 # This example contains only the most important settings.
 # See docs or electrs man page for advanced settings.
 
-# File where flokicoind stores the cookie, usually file .cookie in its datadir
+# File where lokid stores the cookie, usually file .cookie in its datadir
 # cookie_file = "/var/run/flokicoin-mainnet/cookie"
 
 
-# The listening RPC address of flokicoind, port is usually 8332
+# The listening RPC address of lokid, port is usually 8332
 daemon_rpc_addr = "127.0.0.1:15213"
 
-# The listening P2P address of flokicoind, port is usually 8333
+# The listening P2P address of lokid, port is usually 8333
 daemon_p2p_addr = "127.0.0.1:15212"
 
 # Directory where the index should be stored. It should have at least 70GB of free space.
