--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 workspace = { members = ["electrs_macros"] }
 
 [package]
-name = "electrs"
-version = "0.4.2"
+name = "flokicoin-electrs"
+version = "0.1.3"
 authors = ["Roman Zeyde <me@romanzey.de>"]
 description = "An efficient re-implementation of Electrum Server in Rust"
 license = "MIT"
