add explicit electrs lib target to Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,9 @@ readme = "README.md"
 edition = "2018"
 default-run = "electrs"
 
+[lib]
+name = "electrs"
+
 [features]
 liquid = ["elements"]
 electrum-discovery = ["electrum-client"]
